--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <div style="background-color: rgb(255, 122, 144);">Recetas</div>
             <div style="background-color: yellow">Menú del día</div>
         </div>
-        <div style="background-color: rgba(255, 192, 203, 0.555);">Footer 2021 &copy;</div>
+        <div style="background-color: rgba(255, 192, 203, 0.555);">Footer - 2021 - &copy;</div>
     </body>
+
 </html>
