Comentario para el aside

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div style="background-color: red;">Mis recetas</div>
         <div style="background-color: blue;">Inicio | Recetas | Contactar</div>
-        <div style="background-color: green;">
+        <div style="background-color: green;"><!--Aside-->
             <div style="background-color: rgb(255, 122, 144);">Recetas</div>
             <div style="background-color: yellow">Menú del día</div>
         </div>
