Finalizamos estructura con divs

--- a/index.html
+++ b/index.html
@@ -9,11 +9,39 @@
     <body>
         <div style="background-color: red;">Mis recetas</div>
         <div style="background-color: blue;">Inicio | Recetas | Contactar</div>
-        <div style="background-color: green;"><!--Aside-->
-            <div style="background-color: rgb(255, 122, 144);">Recetas</div>
-            <div style="background-color: yellow">Menú del día</div>
+        <div style="background-color: green;">
+            <div style="background-color:pink">
+                <div>
+                    <div>Receta 1</div>
+                    <div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus optio itaque facere officiis non voluptates, temporibus, sapiente ea labore aut alias quis odio quasi id corrupti nihil necessitatibus modi est.
+                    </div>
+                </div>
+                <div style="background-color: darkblue;">
+                    <div>Receta 2</div>
+                    <div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus optio itaque facere officiis non voluptates, temporibus, sapiente ea labore aut alias quis odio quasi id corrupti nihil necessitatibus modi est.
+                    </div>
+                </div>
+                <div>
+                    <div>Receta 3</div>
+                    <div>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus optio itaque facere officiis non voluptates, temporibus, sapiente ea labore aut alias quis odio quasi id corrupti nihil necessitatibus modi est.
+                    </div>
+                </div>
+            </div>
+        
+            <div style="background-color: yellow">
+                <div>Menu del día</div>
+                <div>
+                    <div>receta 6</div> 
+                    <div>receta 7</div>
+                    <div>receta 9</div>
+                </div>
+            </div>
         </div>
-        <div style="background-color: rgba(255, 192, 203, 0.555);">Footer - 2021 - &copy;</div>
+    
+        <div style="background-color:coral);">Footer - 2021 - &copy;</div>
     </body>
 
 </html>
