--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
         </div>
     
-        <div style="background-color:coral);">Footer - 2021 - &copy;</div>
+        <div style="background-color:coral;">Footer - 2021 - &copy;</div>
     </body>
 
 </html>
