Estructura básica con etiquetas semanticas

--- a/index.html
+++ b/index.html
@@ -7,41 +7,43 @@
         <meta name="keywords" content="Recetas, cocina, gastronomía">    
     </head>
     <body>
-        <div style="background-color: red;">Mis recetas</div>
-        <div style="background-color: blue;">Inicio | Recetas | Contactar</div>
-        <div style="background-color: green;">
-            <div style="background-color:pink">
-                <div>
-                    <div>Receta 1</div>
-                    <div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus optio itaque facere officiis non voluptates, temporibus, sapiente ea labore aut alias quis odio quasi id corrupti nihil necessitatibus modi est.
-                    </div>
-                </div>
-                <div style="background-color: darkblue;">
-                    <div>Receta 2</div>
-                    <div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus optio itaque facere officiis non voluptates, temporibus, sapiente ea labore aut alias quis odio quasi id corrupti nihil necessitatibus modi est.
-                    </div>
-                </div>
-                <div>
-                    <div>Receta 3</div>
-                    <div>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus optio itaque facere officiis non voluptates, temporibus, sapiente ea labore aut alias quis odio quasi id corrupti nihil necessitatibus modi est.
-                    </div>
-                </div>
-            </div>
+        <header style="background-color: red;">
+            Mis recetas
+        </header>
+        <nav style="background-color: orange;">Inicio | Recetas | Contactar</nav>
+        <main style="background-color: green;"> 
+            <section style="background-color:blue">
+                <article style="background-color: blueviolet;">
+                    <header style="background-color: chartreuse;">Receta 1</header>
+                        <p style="background-color: chartreuse;">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus optio itaque facere officiis non voluptates, temporibus, sapiente ea labore aut alias quis odio quasi id corrupti nihil necessitatibus modi est.
+                        </p>
+                </article style="background-color: violet;">
+                <article style="background-color: blueviolet;">
+                    <header style="background-color: chartreuse;">Receta 2</header>
+                        <p style="background-color: chartreuse;">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus optio itaque facere officiis non voluptates, temporibus, sapiente ea labore aut alias quis odio quasi id corrupti nihil necessitatibus modi est.
+                        </p>
+                </article>
+                <article style="background-color: blueviolet;">
+                    <header style="background-color: chartreuse;">Receta 3</header>
+                        <p style="background-color: chartreuse;">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus optio itaque facere officiis non voluptates, temporibus, sapiente ea labore aut alias quis odio quasi id corrupti nihil necessitatibus modi est.
+                        </p>
+                </article>
+            </section>
         
-            <div style="background-color: yellow">
-                <div>Menu del día</div>
-                <div>
-                    <div>receta 6</div> 
-                    <div>receta 7</div>
-                    <div>receta 9</div>
-                </div>
-            </div>
-        </div>
+            <aside style="background-color: chocolate">
+                <header>Menu del día</header>
+                <ul>
+                    <li>receta 6</li> 
+                    <li>receta 7</li>
+                    <li>receta 9</li>
+                </ul>
+            </aside>
+        </main>
     
-        <div style="background-color:coral;">Footer - 2021 - &copy;</div>
+        <footer style="background-color:coral;">Footer - 2021 - &copy;</footer>
     </body>
 
 </html>
