Creamos la página test.html con distintos elementos html. Subimos imagen de carbonara

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <p style="background-color: chartreuse;">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus optio itaque facere officiis non voluptates, temporibus, sapiente ea labore aut alias quis odio quasi id corrupti nihil necessitatibus modi est.
                         </p>
-                </article style="background-color: violet;">
+                </article>
                 <article style="background-color: blueviolet;">
                     <header style="background-color: chartreuse;">Receta 2</header>
                         <p style="background-color: chartreuse;">
