Comentarios para aclarar las diferencias entre placeholder, value  y button , submit

--- a/test.html
+++ b/test.html
@@ -84,8 +84,8 @@
      <h1>Formularios</h1>
      <form action="">
 
-         <input name="miNombre" type="text" placeholder="Nombre:">
-         <input type="number" value="0"><br>
+         <input name="miNombre" type="text" placeholder="Nombre:"><!--placeholder añade un texto de referencia que desaparecera en el momento que se situa el cursor-->
+         <input type="number" value="0"><br><!--value añade un valor que al contrario de placeholder no desaparece del campo-->
          <input type="password" placeholder="Contraseña:">
          <input type="date">
          <br>
@@ -98,7 +98,7 @@
          </select>
          <br>
          <input type="submit" value="Envio 1">
-         <button>Envio 2</button><!--La diferencia con submit es que no hace falta el value-->
+         <button>Envio 2</button><!--La diferencia con submit es, que no hace falta el value-->
      </form>
      <hr>
      <form action="">
