Estilos para table y estilos fieldset

--- a/test.html
+++ b/test.html
@@ -6,9 +6,13 @@
     <title>Test</title>
     <style>
         table, tr, th, td {
-            border: 1px solid;
+            border: 2px solid olive;
             border-collapse: collapse;
             text-align: center;
+        }
+
+        fieldset {
+            width: 250px;
         }
     </style>
 </head>
@@ -102,6 +106,7 @@
      </form>
      <hr>
      <form action="">
+         <fieldset>
         <label for="">Introduce tu nombre:</label> <!--label agrupa el input al que va relacionado-->
         <input type="text"> 
         <br><br>
@@ -109,6 +114,7 @@
         <input type="password">
         <br><br>
         <button>Enviar datos</button>
+    </fieldset>
      </form>
      <p>Lorem ipsum dolor sit amet.</p>
      <p>OK</p>
