--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>Mis recetas</title>
@@ -18,7 +18,7 @@
     </nav>
 
     <main style="display:flex;border: 1px solid blue;padding: 60px; margin-bottom: 20px;">
-        <section style="display:flex;width:75%;padding:5px;justify-content:space-around;row;flex-wrap:wrap;border:2px solid black">
+        <section style="display:flex;width:75%;padding:5px;justify-content:space-around;flex-wrap:wrap;border:2px solid black">
             <div style="border:1px solid green;width:40%;padding:10px;margin-bottom:5px;">
                 <h2><a href="">receta 1</a></h2>
                 <a href=""><img width="100" height="70" src="_resources/espaguetis-de-calabacin.jpg"></a>                
