--- a/index.html
+++ b/index.html
@@ -2,14 +2,58 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mis recetas</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Página web sobre mis recetas">
     <meta name="keywords" content="recetas, gastronomía, comer">
-    <link rel="icon" href="">
+    <link rel="icon" href="ico.png">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    mis recetas
+    <div class="container">
+    <header id="header" class="block-center-row mb-3">
+        <img src="images/logo.png" alt="Logotipo mis recetas">
+    </header>
+    <nav class="nav-main fnt-lg block-center-row mb-2">
+        <ul>
+            <li>Inicio</li>
+            <li class="separator">|</li> 
+            <li> <a href="">Recetas</a></li>
+            <li class="separator">|</li>   
+            <li> <a href="">Contactar</a></li> 
+        </ul>
+        
+    </nav>
+    <main id="main">
+        <section>
+            <div>
+                <h2>Lubina con hummus</h2>
+                <img src="_resources/lubina-con-hummus-de-guisantes.jpg" alt=""> 
+            </div>
+            <div>
+                <h2>Tiramisu express</h2>
+                <img src="_resources/tiramisu-express.jpg" alt=""> 
+            </div>
+            <div>
+                <h2>Espaguetis de calabacin</h2>
+                <img src="_resources/espaguetis-de-calabacin.jpg" alt=""> 
+            </div>
+            <div>
+                <h2>Vichyssoise de esoarragos blancos</h2>
+                <img src="_resources/vichyssoise-de-esparragos-blancos.jpg" alt=""> 
+            </div>
+           
+        </section>
+        <aside>
+
+        </aside>
+    </main>
+    <div class="mb3"></div>
+    <footer id="footer">
+        footer
+    </footer>
+    </div>
 </body>
 </html>
