--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li class="separator">|</li> 
                 <li> <a href="recetas.html">Recetas</a></li>
                 <li class="separator">|</li>   
-                <li> <a href="contacto.html">Contactar</a></li> 
+                <li> <a href="contactar.html">Contactar</a></li> 
             </ul>
             
         </nav>
