--- a/recetas.html
+++ b/recetas.html
@@ -23,7 +23,7 @@
                 <li class="separator">|</li> 
                 <li>Recetas</li>
                 <li class="separator">|</li>   
-                <li> <a href="contacto.html">Contactar</a></li> 
+                <li> <a href="contactar.html">Contactar</a></li> 
             </ul>
             
         </nav>
